{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 184,
  "lineage": "9c596771-852f-6c01-cd37-1992a447b7e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:security-group/sg-06b556a5ff3c0ac54",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06b556a5ff3c0ac54",
            "ingress": [],
            "name": "all_worker_management20240329214916108100000007",
            "name_prefix": "all_worker_management",
            "owner_id": "767397759562",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-1560353589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06b556a5ff3c0ac54",
            "security_group_rule_id": "sgr-0fbdda709b1455f10",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-1394966935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06b556a5ff3c0ac54",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:security-group/sg-0574cc2bf03d6d056",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0574cc2bf03d6d056",
            "ingress": [],
            "name": "pavan-eks-rYWomZ9U-cluster-20240329214916078300000004",
            "name_prefix": "pavan-eks-rYWomZ9U-cluster-",
            "owner_id": "767397759562",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pavan-eks-rYWomZ9U-cluster",
              "cluster": "demo"
            },
            "tags_all": {
              "Name": "pavan-eks-rYWomZ9U-cluster",
              "cluster": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:security-group/sg-0ee6b0d040236fb75",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0ee6b0d040236fb75",
            "ingress": [],
            "name": "pavan-eks-rYWomZ9U-node-20240329214916091300000006",
            "name_prefix": "pavan-eks-rYWomZ9U-node-",
            "owner_id": "767397759562",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pavan-eks-rYWomZ9U-node",
              "cluster": "demo",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "owned"
            },
            "tags_all": {
              "Name": "pavan-eks-rYWomZ9U-node",
              "cluster": "demo",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1923053717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0574cc2bf03d6d056",
            "security_group_rule_id": "sgr-0557f59cfeb6a27c9",
            "self": false,
            "source_security_group_id": "sg-0ee6b0d040236fb75",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2832895717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-0f09f99e79f8238d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1186283661",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-06fb652def5178bef",
            "self": false,
            "source_security_group_id": "sg-0574cc2bf03d6d056",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1474558433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-0d4cb77aaaee37e3e",
            "self": false,
            "source_security_group_id": "sg-0574cc2bf03d6d056",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2661391991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-020ae64dc48cea126",
            "self": false,
            "source_security_group_id": "sg-0574cc2bf03d6d056",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2382209622",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-0211dae5c0d792518",
            "self": false,
            "source_security_group_id": "sg-0574cc2bf03d6d056",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3915157917",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-0da5b09034d73534d",
            "self": false,
            "source_security_group_id": "sg-0574cc2bf03d6d056",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2540703930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-04106d558609744da",
            "self": false,
            "source_security_group_id": "sg-0574cc2bf03d6d056",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-294294303",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-0551fa4ecde3bded0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3697974781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-018bda5b9dce326b6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2016755218",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ee6b0d040236fb75",
            "security_group_rule_id": "sgr-0d0e57ce11e24724f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:network-acl/acl-008b654225c9c1148",
            "default_network_acl_id": "acl-008b654225c9c1148",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-008b654225c9c1148",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397759562",
            "subnet_ids": [
              "subnet-052ec989d89b352fe",
              "subnet-05802a5cf250119ba",
              "subnet-076b0f01f1fb47ff1",
              "subnet-0f83b7f67161356d2"
            ],
            "tags": {
              "Name": "pavan-eks-vpc-default",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-default",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:route-table/rtb-08844114468ef7d5b",
            "default_route_table_id": "rtb-08844114468ef7d5b",
            "id": "rtb-08844114468ef7d5b",
            "owner_id": "767397759562",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "pavan-eks-vpc-default",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-default",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:security-group/sg-02d3180b17ecdd555",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02d3180b17ecdd555",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767397759562",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pavan-eks-vpc-default",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-default",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a7caea158ebb570",
            "domain": "vpc",
            "id": "eipalloc-06a7caea158ebb570",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-215-142-99.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.142.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pavan-eks-vpc-us-west-1b",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-us-west-1b",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:internet-gateway/igw-022da0d4e3f928da8",
            "id": "igw-022da0d4e3f928da8",
            "owner_id": "767397759562",
            "tags": {
              "Name": "pavan-eks-vpc",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a7caea158ebb570",
            "association_id": "eipassoc-0321469dd1e8158c5",
            "connectivity_type": "public",
            "id": "nat-000d921d04b0fa7e2",
            "network_interface_id": "eni-0fa1b75f91bbcfe96",
            "private_ip": "10.0.4.30",
            "public_ip": "54.215.142.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f83b7f67161356d2",
            "tags": {
              "Name": "pavan-eks-vpc-us-west-1b",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-us-west-1b",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0016b077a037c0d771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-000d921d04b0fa7e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0016b077a037c0d77",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-022da0d4e3f928da8",
            "id": "r-rtb-02cd5bb866e18363e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cd5bb866e18363e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:route-table/rtb-0016b077a037c0d77",
            "id": "rtb-0016b077a037c0d77",
            "owner_id": "767397759562",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pavan-eks-vpc-private",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-private",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:route-table/rtb-02cd5bb866e18363e",
            "id": "rtb-02cd5bb866e18363e",
            "owner_id": "767397759562",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pavan-eks-vpc-public",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-public",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f309502efa7c262f",
            "route_table_id": "rtb-0016b077a037c0d77",
            "subnet_id": "subnet-05802a5cf250119ba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e90c64a8cf3e114b",
            "route_table_id": "rtb-0016b077a037c0d77",
            "subnet_id": "subnet-076b0f01f1fb47ff1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c3478a7875e18d9",
            "route_table_id": "rtb-02cd5bb866e18363e",
            "subnet_id": "subnet-0f83b7f67161356d2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07844aeb0a67e522e",
            "route_table_id": "rtb-02cd5bb866e18363e",
            "subnet_id": "subnet-052ec989d89b352fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:subnet/subnet-05802a5cf250119ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05802a5cf250119ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397759562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pavan-eks-vpc-private-us-west-1b",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-private-us-west-1b",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:subnet/subnet-076b0f01f1fb47ff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076b0f01f1fb47ff1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397759562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pavan-eks-vpc-private-us-west-1c",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-private-us-west-1c",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:subnet/subnet-0f83b7f67161356d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f83b7f67161356d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397759562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pavan-eks-vpc-public-us-west-1b",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-public-us-west-1b",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:subnet/subnet-052ec989d89b352fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052ec989d89b352fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397759562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pavan-eks-vpc-public-us-west-1c",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc-public-us-west-1c",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07f4f57b35d8f057f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397759562:vpc/vpc-07f4f57b35d8f057f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008b654225c9c1148",
            "default_route_table_id": "rtb-08844114468ef7d5b",
            "default_security_group_id": "sg-02d3180b17ecdd555",
            "dhcp_options_id": "dopt-0ade247bb96bf8206",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f4f57b35d8f057f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08844114468ef7d5b",
            "owner_id": "767397759562",
            "tags": {
              "Name": "pavan-eks-vpc",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            },
            "tags_all": {
              "Name": "pavan-eks-vpc",
              "kubernetes.io/cluster/pavan-eks-rYWomZ9U": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}